recursion.logo.lessons.recursion.logo.koch.PentaKoch.scala.error
PentaKoch:6: error: ')' expected but double literal found.
    pentaKoch(levels-1, length0.4) ;
                               ^